[package]
name = "libvibrant"
version = "0.1.0"
authors = ["zee-mzha <zee.mzha@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libXNVCtrl-sys = "1.29"
thiserror = "1.0"

[dependencies.x11]
version = "2.18"
features = ["xrandr"]
