[package]
name = "vibrant-ffi"
version = "1.0.5"
authors = ["zee-mzha <zee.mzha@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libvibrant = { path = "../libvibrant" }


[build-dependencies]
cbindgen = "0.16.0"
